2008-04-14  Joshua Sumali  <jsumali@redhat.com>

	* rt/net/sourceforge/jnlp/services/XFileContents.java: Add support for
	JNLPRandomAccessFile.
	* rt/net/sourceforge/jnlp/services/XServiceManagerStub.java: Add
	PrintService and JNLPRandomAccessFile services.
	* rt/net/sourceforge/jnlp/services/XJNLPRandomAccessFile.java: New file.
	* rt/net/sourceforge/jnlp/services/XPrintService.java: Likewise.

2008-04-14  Lillian Angel  <langel@redhat.com>

	* Makefile.in: Regenerated.
	* configure: Regenerated.
	* configure.ac: Added checks for make, gzip and ant.

2008-04-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	Pass ALT_PARALLEL_COMPILE_JOBS and
	HOTSPOT_BUILD_JOBS to ICEDTEA_ENV
	and ICEDTEA_ENV_ECJ as configured.
	* Makefile.in,
	* configure:
	Updated.
	* configure.ac:
	Add --with-parallel-jobs=x option.
	
2008-04-12  Mark Wielaard  <mark@klomp.org>

	* Makefile.am: Updated to OpenJDK b09 release.
	* Makefile.in: Regenerated.

2008-04-11  Lillian Angel  <langel@redhat.com>

	* AUTHORS: Updated.

2008-04-10  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stackPrinter_zero.hpp
	(ZeroStackPrinter::print): Fail gracefully when not set up.

2008-04-10  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/javaStack_zero.hpp: Renamed as...
	* ports/hotspot/src/cpu/zero/vm/stack_zero.hpp: New file.
	Renamed JavaStack as ZeroStack, JavaFrame as ZeroFrame, and
	JavaStackPrinter as ZeroStackPrinter.
	* patches/icedtea-zero.patch: Likewise.
	* ports/hotspot/src/cpu/zero/vm/assembler_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/bytecodeInterpreter_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/cppInterpreter_zero.cpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/entryFrame_zero.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.cpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/frame_zero.inline.hpp: Likewise.
	* ports/hotspot/src/cpu/zero/vm/interpreterFrame_zero.hpp: Likewise.