@@ -1,3 +1,9 @@
+2008-04-15  Christan Thalinger  <twisti@complang.tuwien.ac.at>
+
+	* acinclude.m4 (ENABLE_ZERO_BUILD): Make --disable-zero work and
+	don't build zero by default when compiling --with-cacao.
+	* aclocal.m4, configure, Makefile.in: Regenerated.
+
 2008-04-14  Joshua Sumali  <jsumali@redhat.com>
 
 	* rt/net/sourceforge/jnlp/services/XFileContents.java: Add support for
